Fixed button/email alignment (#26)

--- a/my-app/src/components/css/AdminSettingsPage.css
+++ b/my-app/src/components/css/AdminSettingsPage.css
@@ -10,7 +10,7 @@
 	list-style-type: none;
 	text-align: left;
 	font-size: 12px;
-	margin-top: 3vh;
+	margin-top: -8vh;
 	margin-left: 2vw;
 	position: relative;
 }
@@ -26,7 +26,7 @@
 	position: relative;
 	height: 10vh;
 	width: 50vw;
-	margin-top: -8vh;
+	margin-top: -20vh;
 	margin-left: 20vw;
 }
 
